Add missing IPC struct member msaa_is_slow.

Missed this in previous CL: crrev.com/1781093002 - added this field to the capabilities, but not to the IPC struct traits.

Might explain some of the flakiness in GPU bots.

BUG=596730, 596475
CQ_INCLUDE_TRYBOTS=tryserver.chromium.win:win_optional_gpu_tests_rel

Review URL: https://codereview.chromium.org/1826673002

Cr-Commit-Position: refs/heads/master@{#382879}

Former-commit-id: 9a7b8ea49fe9b5d8509a9a43275809ab759853a8